// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PStepper > renders with as correctly 1`] = `
"<section role="group" aria-label="progress" data-linear="" data-orientation="horizontal" data-pohon="stepper-root">
  <div class="" data-pohon="stepper-header">
    <div aria-current="true" data-state="active" data-orientation="horizontal" class="" data-pohon="stepper-item">
      <div class="" data-pohon="stepper-container"><button type="button" data-state="active" data-orientation="horizontal" tabindex="0" aria-describedby="akar-stepper-item-description-v-0-0-1" aria-labelledby="akar-stepper-item-title-v-0-0-0" class="" data-pohon="stepper-trigger">
          <div class="" data-pohon="stepper-indicator"><span class="iconify i-lucide:house" aria-hidden="true" data-pohon="stepper-icon"></span></div>
        </button>
        <div data-orientation="horizontal" role="none" data-state="active" class="" data-pohon="stepper-separator"></div>
      </div>
      <div class="" data-pohon="stepper-wrapper">
        <div id="akar-stepper-item-title-v-0-0-0" class="" data-pohon="stepper-title">Address</div>
        <div id="akar-stepper-item-description-v-0-0-1" class="" data-pohon="stepper-description">Add your address here</div>
      </div>
    </div>
    <div data-state="inactive" data-orientation="horizontal" class="" data-pohon="stepper-item">
      <div class="" data-pohon="stepper-container"><button type="button" data-state="inactive" data-orientation="horizontal" tabindex="0" aria-describedby="akar-stepper-item-description-v-0-0-3" aria-labelledby="akar-stepper-item-title-v-0-0-2" class="" data-pohon="stepper-trigger">
          <div class="" data-pohon="stepper-indicator"><span class="iconify i-lucide:truck" aria-hidden="true" data-pohon="stepper-icon"></span></div>
        </button>
        <div data-orientation="horizontal" role="none" data-state="inactive" class="" data-pohon="stepper-separator"></div>
      </div>
      <div class="" data-pohon="stepper-wrapper">
        <div id="akar-stepper-item-title-v-0-0-2" class="" data-pohon="stepper-title">Shipping</div>
        <div id="akar-stepper-item-description-v-0-0-3" class="" data-pohon="stepper-description">Set your preferred shipping method</div>
      </div>
    </div>
    <div data-state="inactive" disabled="" data-disabled="" data-orientation="horizontal" class="" data-pohon="stepper-item">
      <div class="" data-pohon="stepper-container"><button type="button" data-state="inactive" disabled="" data-disabled="" data-orientation="horizontal" tabindex="-1" aria-describedby="akar-stepper-item-description-v-0-0-5" aria-labelledby="akar-stepper-item-title-v-0-0-4" class="" data-pohon="stepper-trigger">
          <div class="" data-pohon="stepper-indicator">3</div>
        </button>
        <!--v-if-->
      </div>
      <div class="" data-pohon="stepper-wrapper">
        <div id="akar-stepper-item-title-v-0-0-4" class="" data-pohon="stepper-title">Checkout</div>
        <div id="akar-stepper-item-description-v-0-0-5" class="" data-pohon="stepper-description">Confirm your order</div>
      </div>
    </div>
  </div>
  <!--v-if-->
  <div aria-live="polite" aria-atomic="true" role="status" style="transform: translateX(-100%); position: absolute; pointer-events: none; opacity: 0; margin: 0px;"> Step 0 of 3</div>
</section>"
`;

exports[`PStepper > renders with class correctly 1`] = `
"<div role="group" aria-label="progress" data-linear="" data-orientation="horizontal" class="gap-8" data-pohon="stepper-root">
  <div class="" data-pohon="stepper-header">
    <div aria-current="true" data-state="active" data-orientation="horizontal" class="" data-pohon="stepper-item">
      <div class="" data-pohon="stepper-container"><button type="button" data-state="active" data-orientation="horizontal" tabindex="0" aria-describedby="akar-stepper-item-description-v-0-0-1" aria-labelledby="akar-stepper-item-title-v-0-0-0" class="" data-pohon="stepper-trigger">
          <div class="" data-pohon="stepper-indicator"><span class="iconify i-lucide:house" aria-hidden="true" data-pohon="stepper-icon"></span></div>
        </button>
        <div data-orientation="horizontal" role="none" data-state="active" class="" data-pohon="stepper-separator"></div>
      </div>
      <div class="" data-pohon="stepper-wrapper">
        <div id="akar-stepper-item-title-v-0-0-0" class="" data-pohon="stepper-title">Address</div>
        <div id="akar-stepper-item-description-v-0-0-1" class="" data-pohon="stepper-description">Add your address here</div>
      </div>
    </div>
    <div data-state="inactive" data-orientation="horizontal" class="" data-pohon="stepper-item">
      <div class="" data-pohon="stepper-container"><button type="button" data-state="inactive" data-orientation="horizontal" tabindex="0" aria-describedby="akar-stepper-item-description-v-0-0-3" aria-labelledby="akar-stepper-item-title-v-0-0-2" class="" data-pohon="stepper-trigger">
          <div class="" data-pohon="stepper-indicator"><span class="iconify i-lucide:truck" aria-hidden="true" data-pohon="stepper-icon"></span></div>
        </button>
        <div data-orientation="horizontal" role="none" data-state="inactive" class="" data-pohon="stepper-separator"></div>
      </div>
      <div class="" data-pohon="stepper-wrapper">
        <div id="akar-stepper-item-title-v-0-0-2" class="" data-pohon="stepper-title">Shipping</div>
        <div id="akar-stepper-item-description-v-0-0-3" class="" data-pohon="stepper-description">Set your preferred shipping method</div>
      </div>
    </div>
    <div data-state="inactive" disabled="" data-disabled="" data-orientation="horizontal" class="" data-pohon="stepper-item">
      <div class="" data-pohon="stepper-container"><button type="button" data-state="inactive" disabled="" data-disabled="" data-orientation="horizontal" tabindex="-1" aria-describedby="akar-stepper-item-description-v-0-0-5" aria-labelledby="akar-stepper-item-title-v-0-0-4" class="" data-pohon="stepper-trigger">
          <div class="" data-pohon="stepper-indicator">3</div>
        </button>
        <!--v-if-->
      </div>
      <div class="" data-pohon="stepper-wrapper">
        <div id="akar-stepper-item-title-v-0-0-4" class="" data-pohon="stepper-title">Checkout</div>
        <div id="akar-stepper-item-description-v-0-0-5" class="" data-pohon="stepper-description">Confirm your order</div>
      </div>
    </div>
  </div>
  <!--v-if-->
  <div aria-live="polite" aria-atomic="true" role="status" style="transform: translateX(-100%); position: absolute; pointer-events: none; opacity: 0; margin: 0px;"> Step 0 of 3</div>
</div>"
`;

exports[`PStepper > renders with content slot correctly 1`] = `
"<div role="group" aria-label="progress" data-linear="" data-orientation="horizontal" data-pohon="stepper-root">
  <div class="" data-pohon="stepper-header">
    <div aria-current="true" data-state="active" data-orientation="horizontal" class="" data-pohon="stepper-item">
      <div class="" data-pohon="stepper-container"><button type="button" data-state="active" data-orientation="horizontal" tabindex="0" aria-describedby="akar-stepper-item-description-v-0-0-1" aria-labelledby="akar-stepper-item-title-v-0-0-0" class="" data-pohon="stepper-trigger">
          <div class="" data-pohon="stepper-indicator"><span class="iconify i-lucide:house" aria-hidden="true" data-pohon="stepper-icon"></span></div>
        </button>
        <div data-orientation="horizontal" role="none" data-state="active" class="" data-pohon="stepper-separator"></div>
      </div>
      <div class="" data-pohon="stepper-wrapper">
        <div id="akar-stepper-item-title-v-0-0-0" class="" data-pohon="stepper-title">Address</div>
        <div id="akar-stepper-item-description-v-0-0-1" class="" data-pohon="stepper-description">Add your address here</div>
      </div>
    </div>
    <div data-state="inactive" data-orientation="horizontal" class="" data-pohon="stepper-item">
      <div class="" data-pohon="stepper-container"><button type="button" data-state="inactive" data-orientation="horizontal" tabindex="0" aria-describedby="akar-stepper-item-description-v-0-0-3" aria-labelledby="akar-stepper-item-title-v-0-0-2" class="" data-pohon="stepper-trigger">
          <div class="" data-pohon="stepper-indicator"><span class="iconify i-lucide:truck" aria-hidden="true" data-pohon="stepper-icon"></span></div>
        </button>
        <div data-orientation="horizontal" role="none" data-state="inactive" class="" data-pohon="stepper-separator"></div>
      </div>
      <div class="" data-pohon="stepper-wrapper">
        <div id="akar-stepper-item-title-v-0-0-2" class="" data-pohon="stepper-title">Shipping</div>
        <div id="akar-stepper-item-description-v-0-0-3" class="" data-pohon="stepper-description">Set your preferred shipping method</div>
      </div>
    </div>
    <div data-state="inactive" disabled="" data-disabled="" data-orientation="horizontal" class="" data-pohon="stepper-item">
      <div class="" data-pohon="stepper-container"><button type="button" data-state="inactive" disabled="" data-disabled="" data-orientation="horizontal" tabindex="-1" aria-describedby="akar-stepper-item-description-v-0-0-5" aria-labelledby="akar-stepper-item-title-v-0-0-4" class="" data-pohon="stepper-trigger">
          <div class="" data-pohon="stepper-indicator">3</div>
        </button>
        <!--v-if-->
      </div>
      <div class="" data-pohon="stepper-wrapper">
        <div id="akar-stepper-item-title-v-0-0-4" class="" data-pohon="stepper-title">Checkout</div>
        <div id="akar-stepper-item-description-v-0-0-5" class="" data-pohon="stepper-description">Confirm your order</div>
      </div>
    </div>
  </div>
  <div class="" data-pohon="stepper-content">Content slot</div>
  <div aria-live="polite" aria-atomic="true" role="status" style="transform: translateX(-100%); position: absolute; pointer-events: none; opacity: 0; margin: 0px;"> Step 0 of 3</div>
</div>"
`;

exports[`PStepper > renders with custom slot correctly 1`] = `
"<div role="group" aria-label="progress" data-linear="" data-orientation="horizontal" data-pohon="stepper-root">
  <div class="" data-pohon="stepper-header">
    <div aria-current="true" data-state="active" data-orientation="horizontal" class="" data-pohon="stepper-item">
      <div class="" data-pohon="stepper-container"><button type="button" data-state="active" data-orientation="horizontal" tabindex="0" aria-describedby="akar-stepper-item-description-v-0-0-1" aria-labelledby="akar-stepper-item-title-v-0-0-0" class="" data-pohon="stepper-trigger">
          <div class="" data-pohon="stepper-indicator"><span class="iconify i-lucide:house" aria-hidden="true" data-pohon="stepper-icon"></span></div>
        </button>
        <div data-orientation="horizontal" role="none" data-state="active" class="" data-pohon="stepper-separator"></div>
      </div>
      <div class="" data-pohon="stepper-wrapper">
        <div id="akar-stepper-item-title-v-0-0-0" class="" data-pohon="stepper-title">Address</div>
        <div id="akar-stepper-item-description-v-0-0-1" class="" data-pohon="stepper-description">Add your address here</div>
      </div>
    </div>
    <div data-state="inactive" data-orientation="horizontal" class="" data-pohon="stepper-item">
      <div class="" data-pohon="stepper-container"><button type="button" data-state="inactive" data-orientation="horizontal" tabindex="0" aria-describedby="akar-stepper-item-description-v-0-0-3" aria-labelledby="akar-stepper-item-title-v-0-0-2" class="" data-pohon="stepper-trigger">
          <div class="" data-pohon="stepper-indicator"><span class="iconify i-lucide:truck" aria-hidden="true" data-pohon="stepper-icon"></span></div>
        </button>
        <div data-orientation="horizontal" role="none" data-state="inactive" class="" data-pohon="stepper-separator"></div>
      </div>
      <div class="" data-pohon="stepper-wrapper">
        <div id="akar-stepper-item-title-v-0-0-2" class="" data-pohon="stepper-title">Shipping</div>
        <div id="akar-stepper-item-description-v-0-0-3" class="" data-pohon="stepper-description">Set your preferred shipping method</div>
      </div>
    </div>
    <div data-state="inactive" disabled="" data-disabled="" data-orientation="horizontal" class="" data-pohon="stepper-item">
      <div class="" data-pohon="stepper-container"><button type="button" data-state="inactive" disabled="" data-disabled="" data-orientation="horizontal" tabindex="-1" aria-describedby="akar-stepper-item-description-v-0-0-5" aria-labelledby="akar-stepper-item-title-v-0-0-4" class="" data-pohon="stepper-trigger">
          <div class="" data-pohon="stepper-indicator">3</div>
        </button>
        <!--v-if-->
      </div>
      <div class="" data-pohon="stepper-wrapper">
        <div id="akar-stepper-item-title-v-0-0-4" class="" data-pohon="stepper-title">Checkout</div>
        <div id="akar-stepper-item-description-v-0-0-5" class="" data-pohon="stepper-description">Confirm your order</div>
      </div>
    </div>
  </div>
  <!--v-if-->
  <div aria-live="polite" aria-atomic="true" role="status" style="transform: translateX(-100%); position: absolute; pointer-events: none; opacity: 0; margin: 0px;"> Step 0 of 3</div>
</div>"
`;

exports[`PStepper > renders with default slot correctly 1`] = `
"<div role="group" aria-label="progress" data-linear="" data-orientation="horizontal" data-pohon="stepper-root">
  <div class="" data-pohon="stepper-header">
    <div aria-current="true" data-state="active" data-orientation="horizontal" class="" data-pohon="stepper-item">
      <div class="" data-pohon="stepper-container"><button type="button" data-state="active" data-orientation="horizontal" tabindex="0" aria-describedby="akar-stepper-item-description-v-0-0-1" aria-labelledby="akar-stepper-item-title-v-0-0-0" class="" data-pohon="stepper-trigger">
          <div class="" data-pohon="stepper-indicator"><span class="iconify i-lucide:house" aria-hidden="true" data-pohon="stepper-icon"></span></div>
        </button>
        <div data-orientation="horizontal" role="none" data-state="active" class="" data-pohon="stepper-separator"></div>
      </div>
      <div class="" data-pohon="stepper-wrapper">
        <div id="akar-stepper-item-title-v-0-0-0" class="" data-pohon="stepper-title">Address</div>
        <div id="akar-stepper-item-description-v-0-0-1" class="" data-pohon="stepper-description">Add your address here</div>
      </div>
    </div>
    <div data-state="inactive" data-orientation="horizontal" class="" data-pohon="stepper-item">
      <div class="" data-pohon="stepper-container"><button type="button" data-state="inactive" data-orientation="horizontal" tabindex="0" aria-describedby="akar-stepper-item-description-v-0-0-3" aria-labelledby="akar-stepper-item-title-v-0-0-2" class="" data-pohon="stepper-trigger">
          <div class="" data-pohon="stepper-indicator"><span class="iconify i-lucide:truck" aria-hidden="true" data-pohon="stepper-icon"></span></div>
        </button>
        <div data-orientation="horizontal" role="none" data-state="inactive" class="" data-pohon="stepper-separator"></div>
      </div>
      <div class="" data-pohon="stepper-wrapper">
        <div id="akar-stepper-item-title-v-0-0-2" class="" data-pohon="stepper-title">Shipping</div>
        <div id="akar-stepper-item-description-v-0-0-3" class="" data-pohon="stepper-description">Set your preferred shipping method</div>
      </div>
    </div>
    <div data-state="inactive" disabled="" data-disabled="" data-orientation="horizontal" class="" data-pohon="stepper-item">
      <div class="" data-pohon="stepper-container"><button type="button" data-state="inactive" disabled="" data-disabled="" data-orientation="horizontal" tabindex="-1" aria-describedby="akar-stepper-item-description-v-0-0-5" aria-labelledby="akar-stepper-item-title-v-0-0-4" class="" data-pohon="stepper-trigger">
          <div class="" data-pohon="stepper-indicator">3</div>
        </button>
        <!--v-if-->
      </div>
      <div class="" data-pohon="stepper-wrapper">
        <div id="akar-stepper-item-title-v-0-0-4" class="" data-pohon="stepper-title">Checkout</div>
        <div id="akar-stepper-item-description-v-0-0-5" class="" data-pohon="stepper-description">Confirm your order</div>
      </div>
    </div>
  </div>
  <!--v-if-->
  <div aria-live="polite" aria-atomic="true" role="status" style="transform: translateX(-100%); position: absolute; pointer-events: none; opacity: 0; margin: 0px;"> Step 0 of 3</div>
</div>"
`;

exports[`PStepper > renders with defaultValue correctly 1`] = `
"<div role="group" aria-label="progress" data-linear="" data-orientation="horizontal" data-pohon="stepper-root">
  <div class="" data-pohon="stepper-header">
    <div data-state="completed" data-orientation="horizontal" class="" data-pohon="stepper-item">
      <div class="" data-pohon="stepper-container"><button type="button" data-state="completed" data-orientation="horizontal" tabindex="0" aria-describedby="akar-stepper-item-description-v-0-0-1" aria-labelledby="akar-stepper-item-title-v-0-0-0" class="" data-pohon="stepper-trigger">
          <div class="" data-pohon="stepper-indicator"><span class="iconify i-lucide:house" aria-hidden="true" data-pohon="stepper-icon"></span></div>
        </button>
        <div data-orientation="horizontal" role="none" data-state="completed" class="" data-pohon="stepper-separator"></div>
      </div>
      <div class="" data-pohon="stepper-wrapper">
        <div id="akar-stepper-item-title-v-0-0-0" class="" data-pohon="stepper-title">Address</div>
        <div id="akar-stepper-item-description-v-0-0-1" class="" data-pohon="stepper-description">Add your address here</div>
      </div>
    </div>
    <div aria-current="true" data-state="active" data-orientation="horizontal" class="" data-pohon="stepper-item">
      <div class="" data-pohon="stepper-container"><button type="button" data-state="active" data-orientation="horizontal" tabindex="0" aria-describedby="akar-stepper-item-description-v-0-0-3" aria-labelledby="akar-stepper-item-title-v-0-0-2" class="" data-pohon="stepper-trigger">
          <div class="" data-pohon="stepper-indicator"><span class="iconify i-lucide:truck" aria-hidden="true" data-pohon="stepper-icon"></span></div>
        </button>
        <div data-orientation="horizontal" role="none" data-state="active" class="" data-pohon="stepper-separator"></div>
      </div>
      <div class="" data-pohon="stepper-wrapper">
        <div id="akar-stepper-item-title-v-0-0-2" class="" data-pohon="stepper-title">Shipping</div>
        <div id="akar-stepper-item-description-v-0-0-3" class="" data-pohon="stepper-description">Set your preferred shipping method</div>
      </div>
    </div>
    <div data-state="inactive" data-orientation="horizontal" class="" data-pohon="stepper-item">
      <div class="" data-pohon="stepper-container"><button type="button" data-state="inactive" data-orientation="horizontal" tabindex="0" aria-describedby="akar-stepper-item-description-v-0-0-5" aria-labelledby="akar-stepper-item-title-v-0-0-4" class="" data-pohon="stepper-trigger">
          <div class="" data-pohon="stepper-indicator">3</div>
        </button>
        <!--v-if-->
      </div>
      <div class="" data-pohon="stepper-wrapper">
        <div id="akar-stepper-item-title-v-0-0-4" class="" data-pohon="stepper-title">Checkout</div>
        <div id="akar-stepper-item-description-v-0-0-5" class="" data-pohon="stepper-description">Confirm your order</div>
      </div>
    </div>
  </div>
  <!--v-if-->
  <div aria-live="polite" aria-atomic="true" role="status" style="transform: translateX(-100%); position: absolute; pointer-events: none; opacity: 0; margin: 0px;"> Step 1 of 3</div>
</div>"
`;

exports[`PStepper > renders with description slot correctly 1`] = `
"<div role="group" aria-label="progress" data-linear="" data-orientation="horizontal" data-pohon="stepper-root">
  <div class="" data-pohon="stepper-header">
    <div aria-current="true" data-state="active" data-orientation="horizontal" class="" data-pohon="stepper-item">
      <div class="" data-pohon="stepper-container"><button type="button" data-state="active" data-orientation="horizontal" tabindex="0" aria-describedby="akar-stepper-item-description-v-0-0-1" aria-labelledby="akar-stepper-item-title-v-0-0-0" class="" data-pohon="stepper-trigger">
          <div class="" data-pohon="stepper-indicator"><span class="iconify i-lucide:house" aria-hidden="true" data-pohon="stepper-icon"></span></div>
        </button>
        <div data-orientation="horizontal" role="none" data-state="active" class="" data-pohon="stepper-separator"></div>
      </div>
      <div class="" data-pohon="stepper-wrapper">
        <div id="akar-stepper-item-title-v-0-0-0" class="" data-pohon="stepper-title">Address</div>
        <div id="akar-stepper-item-description-v-0-0-1" class="" data-pohon="stepper-description">Description slot</div>
      </div>
    </div>
    <div data-state="inactive" data-orientation="horizontal" class="" data-pohon="stepper-item">
      <div class="" data-pohon="stepper-container"><button type="button" data-state="inactive" data-orientation="horizontal" tabindex="0" aria-describedby="akar-stepper-item-description-v-0-0-3" aria-labelledby="akar-stepper-item-title-v-0-0-2" class="" data-pohon="stepper-trigger">
          <div class="" data-pohon="stepper-indicator"><span class="iconify i-lucide:truck" aria-hidden="true" data-pohon="stepper-icon"></span></div>
        </button>
        <div data-orientation="horizontal" role="none" data-state="inactive" class="" data-pohon="stepper-separator"></div>
      </div>
      <div class="" data-pohon="stepper-wrapper">
        <div id="akar-stepper-item-title-v-0-0-2" class="" data-pohon="stepper-title">Shipping</div>
        <div id="akar-stepper-item-description-v-0-0-3" class="" data-pohon="stepper-description">Description slot</div>
      </div>
    </div>
    <div data-state="inactive" disabled="" data-disabled="" data-orientation="horizontal" class="" data-pohon="stepper-item">
      <div class="" data-pohon="stepper-container"><button type="button" data-state="inactive" disabled="" data-disabled="" data-orientation="horizontal" tabindex="-1" aria-describedby="akar-stepper-item-description-v-0-0-5" aria-labelledby="akar-stepper-item-title-v-0-0-4" class="" data-pohon="stepper-trigger">
          <div class="" data-pohon="stepper-indicator">3</div>
        </button>
        <!--v-if-->
      </div>
      <div class="" data-pohon="stepper-wrapper">
        <div id="akar-stepper-item-title-v-0-0-4" class="" data-pohon="stepper-title">Checkout</div>
        <div id="akar-stepper-item-description-v-0-0-5" class="" data-pohon="stepper-description">Description slot</div>
      </div>
    </div>
  </div>
  <!--v-if-->
  <div aria-live="polite" aria-atomic="true" role="status" style="transform: translateX(-100%); position: absolute; pointer-events: none; opacity: 0; margin: 0px;"> Step 0 of 3</div>
</div>"
`;

exports[`PStepper > renders with indicator slot correctly 1`] = `
"<div role="group" aria-label="progress" data-linear="" data-orientation="horizontal" data-pohon="stepper-root">
  <div class="" data-pohon="stepper-header">
    <div aria-current="true" data-state="active" data-orientation="horizontal" class="" data-pohon="stepper-item">
      <div class="" data-pohon="stepper-container"><button type="button" data-state="active" data-orientation="horizontal" tabindex="0" aria-describedby="akar-stepper-item-description-v-0-0-1" aria-labelledby="akar-stepper-item-title-v-0-0-0" class="" data-pohon="stepper-trigger">
          <div class="" data-pohon="stepper-indicator">Indicator slot</div>
        </button>
        <div data-orientation="horizontal" role="none" data-state="active" class="" data-pohon="stepper-separator"></div>
      </div>
      <div class="" data-pohon="stepper-wrapper">
        <div id="akar-stepper-item-title-v-0-0-0" class="" data-pohon="stepper-title">Address</div>
        <div id="akar-stepper-item-description-v-0-0-1" class="" data-pohon="stepper-description">Add your address here</div>
      </div>
    </div>
    <div data-state="inactive" data-orientation="horizontal" class="" data-pohon="stepper-item">
      <div class="" data-pohon="stepper-container"><button type="button" data-state="inactive" data-orientation="horizontal" tabindex="0" aria-describedby="akar-stepper-item-description-v-0-0-3" aria-labelledby="akar-stepper-item-title-v-0-0-2" class="" data-pohon="stepper-trigger">
          <div class="" data-pohon="stepper-indicator">Indicator slot</div>
        </button>
        <div data-orientation="horizontal" role="none" data-state="inactive" class="" data-pohon="stepper-separator"></div>
      </div>
      <div class="" data-pohon="stepper-wrapper">
        <div id="akar-stepper-item-title-v-0-0-2" class="" data-pohon="stepper-title">Shipping</div>
        <div id="akar-stepper-item-description-v-0-0-3" class="" data-pohon="stepper-description">Set your preferred shipping method</div>
      </div>
    </div>
    <div data-state="inactive" disabled="" data-disabled="" data-orientation="horizontal" class="" data-pohon="stepper-item">
      <div class="" data-pohon="stepper-container"><button type="button" data-state="inactive" disabled="" data-disabled="" data-orientation="horizontal" tabindex="-1" aria-describedby="akar-stepper-item-description-v-0-0-5" aria-labelledby="akar-stepper-item-title-v-0-0-4" class="" data-pohon="stepper-trigger">
          <div class="" data-pohon="stepper-indicator">Indicator slot</div>
        </button>
        <!--v-if-->
      </div>
      <div class="" data-pohon="stepper-wrapper">
        <div id="akar-stepper-item-title-v-0-0-4" class="" data-pohon="stepper-title">Checkout</div>
        <div id="akar-stepper-item-description-v-0-0-5" class="" data-pohon="stepper-description">Confirm your order</div>
      </div>
    </div>
  </div>
  <!--v-if-->
  <div aria-live="polite" aria-atomic="true" role="status" style="transform: translateX(-100%); position: absolute; pointer-events: none; opacity: 0; margin: 0px;"> Step 0 of 3</div>
</div>"
`;

exports[`PStepper > renders with items correctly 1`] = `
"<div role="group" aria-label="progress" data-linear="" data-orientation="horizontal" data-pohon="stepper-root">
  <div class="" data-pohon="stepper-header">
    <div aria-current="true" data-state="active" data-orientation="horizontal" class="" data-pohon="stepper-item">
      <div class="" data-pohon="stepper-container"><button type="button" data-state="active" data-orientation="horizontal" tabindex="0" aria-describedby="akar-stepper-item-description-v-0-0-1" aria-labelledby="akar-stepper-item-title-v-0-0-0" class="" data-pohon="stepper-trigger">
          <div class="" data-pohon="stepper-indicator"><span class="iconify i-lucide:house" aria-hidden="true" data-pohon="stepper-icon"></span></div>
        </button>
        <div data-orientation="horizontal" role="none" data-state="active" class="" data-pohon="stepper-separator"></div>
      </div>
      <div class="" data-pohon="stepper-wrapper">
        <div id="akar-stepper-item-title-v-0-0-0" class="" data-pohon="stepper-title">Address</div>
        <div id="akar-stepper-item-description-v-0-0-1" class="" data-pohon="stepper-description">Add your address here</div>
      </div>
    </div>
    <div data-state="inactive" data-orientation="horizontal" class="" data-pohon="stepper-item">
      <div class="" data-pohon="stepper-container"><button type="button" data-state="inactive" data-orientation="horizontal" tabindex="0" aria-describedby="akar-stepper-item-description-v-0-0-3" aria-labelledby="akar-stepper-item-title-v-0-0-2" class="" data-pohon="stepper-trigger">
          <div class="" data-pohon="stepper-indicator"><span class="iconify i-lucide:truck" aria-hidden="true" data-pohon="stepper-icon"></span></div>
        </button>
        <div data-orientation="horizontal" role="none" data-state="inactive" class="" data-pohon="stepper-separator"></div>
      </div>
      <div class="" data-pohon="stepper-wrapper">
        <div id="akar-stepper-item-title-v-0-0-2" class="" data-pohon="stepper-title">Shipping</div>
        <div id="akar-stepper-item-description-v-0-0-3" class="" data-pohon="stepper-description">Set your preferred shipping method</div>
      </div>
    </div>
    <div data-state="inactive" disabled="" data-disabled="" data-orientation="horizontal" class="" data-pohon="stepper-item">
      <div class="" data-pohon="stepper-container"><button type="button" data-state="inactive" disabled="" data-disabled="" data-orientation="horizontal" tabindex="-1" aria-describedby="akar-stepper-item-description-v-0-0-5" aria-labelledby="akar-stepper-item-title-v-0-0-4" class="" data-pohon="stepper-trigger">
          <div class="" data-pohon="stepper-indicator">3</div>
        </button>
        <!--v-if-->
      </div>
      <div class="" data-pohon="stepper-wrapper">
        <div id="akar-stepper-item-title-v-0-0-4" class="" data-pohon="stepper-title">Checkout</div>
        <div id="akar-stepper-item-description-v-0-0-5" class="" data-pohon="stepper-description">Confirm your order</div>
      </div>
    </div>
  </div>
  <!--v-if-->
  <div aria-live="polite" aria-atomic="true" role="status" style="transform: translateX(-100%); position: absolute; pointer-events: none; opacity: 0; margin: 0px;"> Step 0 of 3</div>
</div>"
`;

exports[`PStepper > renders with modelValue correctly 1`] = `
"<div role="group" aria-label="progress" data-linear="" data-orientation="horizontal" data-pohon="stepper-root">
  <div class="" data-pohon="stepper-header">
    <div data-state="completed" data-orientation="horizontal" class="" data-pohon="stepper-item">
      <div class="" data-pohon="stepper-container"><button type="button" data-state="completed" data-orientation="horizontal" tabindex="0" aria-describedby="akar-stepper-item-description-v-0-0-1" aria-labelledby="akar-stepper-item-title-v-0-0-0" class="" data-pohon="stepper-trigger">
          <div class="" data-pohon="stepper-indicator"><span class="iconify i-lucide:house" aria-hidden="true" data-pohon="stepper-icon"></span></div>
        </button>
        <div data-orientation="horizontal" role="none" data-state="completed" class="" data-pohon="stepper-separator"></div>
      </div>
      <div class="" data-pohon="stepper-wrapper">
        <div id="akar-stepper-item-title-v-0-0-0" class="" data-pohon="stepper-title">Address</div>
        <div id="akar-stepper-item-description-v-0-0-1" class="" data-pohon="stepper-description">Add your address here</div>
      </div>
    </div>
    <div aria-current="true" data-state="active" data-orientation="horizontal" class="" data-pohon="stepper-item">
      <div class="" data-pohon="stepper-container"><button type="button" data-state="active" data-orientation="horizontal" tabindex="0" aria-describedby="akar-stepper-item-description-v-0-0-3" aria-labelledby="akar-stepper-item-title-v-0-0-2" class="" data-pohon="stepper-trigger">
          <div class="" data-pohon="stepper-indicator"><span class="iconify i-lucide:truck" aria-hidden="true" data-pohon="stepper-icon"></span></div>
        </button>
        <div data-orientation="horizontal" role="none" data-state="active" class="" data-pohon="stepper-separator"></div>
      </div>
      <div class="" data-pohon="stepper-wrapper">
        <div id="akar-stepper-item-title-v-0-0-2" class="" data-pohon="stepper-title">Shipping</div>
        <div id="akar-stepper-item-description-v-0-0-3" class="" data-pohon="stepper-description">Set your preferred shipping method</div>
      </div>
    </div>
    <div data-state="inactive" data-orientation="horizontal" class="" data-pohon="stepper-item">
      <div class="" data-pohon="stepper-container"><button type="button" data-state="inactive" data-orientation="horizontal" tabindex="0" aria-describedby="akar-stepper-item-description-v-0-0-5" aria-labelledby="akar-stepper-item-title-v-0-0-4" class="" data-pohon="stepper-trigger">
          <div class="" data-pohon="stepper-indicator">3</div>
        </button>
        <!--v-if-->
      </div>
      <div class="" data-pohon="stepper-wrapper">
        <div id="akar-stepper-item-title-v-0-0-4" class="" data-pohon="stepper-title">Checkout</div>
        <div id="akar-stepper-item-description-v-0-0-5" class="" data-pohon="stepper-description">Confirm your order</div>
      </div>
    </div>
  </div>
  <!--v-if-->
  <div aria-live="polite" aria-atomic="true" role="status" style="transform: translateX(-100%); position: absolute; pointer-events: none; opacity: 0; margin: 0px;"> Step 1 of 3</div>
</div>"
`;

exports[`PStepper > renders with neutral color correctly 1`] = `
"<div role="group" aria-label="progress" data-linear="" data-orientation="horizontal" data-pohon="stepper-root">
  <div class="" data-pohon="stepper-header">
    <div aria-current="true" data-state="active" data-orientation="horizontal" class="" data-pohon="stepper-item">
      <div class="" data-pohon="stepper-container"><button type="button" data-state="active" data-orientation="horizontal" tabindex="0" aria-describedby="akar-stepper-item-description-v-0-0-1" aria-labelledby="akar-stepper-item-title-v-0-0-0" class="" data-pohon="stepper-trigger">
          <div class="" data-pohon="stepper-indicator"><span class="iconify i-lucide:house" aria-hidden="true" data-pohon="stepper-icon"></span></div>
        </button>
        <div data-orientation="horizontal" role="none" data-state="active" class="" data-pohon="stepper-separator"></div>
      </div>
      <div class="" data-pohon="stepper-wrapper">
        <div id="akar-stepper-item-title-v-0-0-0" class="" data-pohon="stepper-title">Address</div>
        <div id="akar-stepper-item-description-v-0-0-1" class="" data-pohon="stepper-description">Add your address here</div>
      </div>
    </div>
    <div data-state="inactive" data-orientation="horizontal" class="" data-pohon="stepper-item">
      <div class="" data-pohon="stepper-container"><button type="button" data-state="inactive" data-orientation="horizontal" tabindex="0" aria-describedby="akar-stepper-item-description-v-0-0-3" aria-labelledby="akar-stepper-item-title-v-0-0-2" class="" data-pohon="stepper-trigger">
          <div class="" data-pohon="stepper-indicator"><span class="iconify i-lucide:truck" aria-hidden="true" data-pohon="stepper-icon"></span></div>
        </button>
        <div data-orientation="horizontal" role="none" data-state="inactive" class="" data-pohon="stepper-separator"></div>
      </div>
      <div class="" data-pohon="stepper-wrapper">
        <div id="akar-stepper-item-title-v-0-0-2" class="" data-pohon="stepper-title">Shipping</div>
        <div id="akar-stepper-item-description-v-0-0-3" class="" data-pohon="stepper-description">Set your preferred shipping method</div>
      </div>
    </div>
    <div data-state="inactive" disabled="" data-disabled="" data-orientation="horizontal" class="" data-pohon="stepper-item">
      <div class="" data-pohon="stepper-container"><button type="button" data-state="inactive" disabled="" data-disabled="" data-orientation="horizontal" tabindex="-1" aria-describedby="akar-stepper-item-description-v-0-0-5" aria-labelledby="akar-stepper-item-title-v-0-0-4" class="" data-pohon="stepper-trigger">
          <div class="" data-pohon="stepper-indicator">3</div>
        </button>
        <!--v-if-->
      </div>
      <div class="" data-pohon="stepper-wrapper">
        <div id="akar-stepper-item-title-v-0-0-4" class="" data-pohon="stepper-title">Checkout</div>
        <div id="akar-stepper-item-description-v-0-0-5" class="" data-pohon="stepper-description">Confirm your order</div>
      </div>
    </div>
  </div>
  <!--v-if-->
  <div aria-live="polite" aria-atomic="true" role="status" style="transform: translateX(-100%); position: absolute; pointer-events: none; opacity: 0; margin: 0px;"> Step 0 of 3</div>
</div>"
`;

exports[`PStepper > renders with size lg horizontal correctly 1`] = `
"<div role="group" aria-label="progress" data-linear="" data-orientation="horizontal" data-pohon="stepper-root">
  <div class="" data-pohon="stepper-header">
    <div aria-current="true" data-state="active" data-orientation="horizontal" class="" data-pohon="stepper-item">
      <div class="" data-pohon="stepper-container"><button type="button" data-state="active" data-orientation="horizontal" tabindex="0" aria-describedby="akar-stepper-item-description-v-0-0-1" aria-labelledby="akar-stepper-item-title-v-0-0-0" class="" data-pohon="stepper-trigger">
          <div class="" data-pohon="stepper-indicator"><span class="iconify i-lucide:house" aria-hidden="true" data-pohon="stepper-icon"></span></div>
        </button>
        <div data-orientation="horizontal" role="none" data-state="active" class="" data-pohon="stepper-separator"></div>
      </div>
      <div class="" data-pohon="stepper-wrapper">
        <div id="akar-stepper-item-title-v-0-0-0" class="" data-pohon="stepper-title">Address</div>
        <div id="akar-stepper-item-description-v-0-0-1" class="" data-pohon="stepper-description">Add your address here</div>
      </div>
    </div>
    <div data-state="inactive" data-orientation="horizontal" class="" data-pohon="stepper-item">
      <div class="" data-pohon="stepper-container"><button type="button" data-state="inactive" data-orientation="horizontal" tabindex="0" aria-describedby="akar-stepper-item-description-v-0-0-3" aria-labelledby="akar-stepper-item-title-v-0-0-2" class="" data-pohon="stepper-trigger">
          <div class="" data-pohon="stepper-indicator"><span class="iconify i-lucide:truck" aria-hidden="true" data-pohon="stepper-icon"></span></div>
        </button>
        <div data-orientation="horizontal" role="none" data-state="inactive" class="" data-pohon="stepper-separator"></div>
      </div>
      <div class="" data-pohon="stepper-wrapper">
        <div id="akar-stepper-item-title-v-0-0-2" class="" data-pohon="stepper-title">Shipping</div>
        <div id="akar-stepper-item-description-v-0-0-3" class="" data-pohon="stepper-description">Set your preferred shipping method</div>
      </div>
    </div>
    <div data-state="inactive" disabled="" data-disabled="" data-orientation="horizontal" class="" data-pohon="stepper-item">
      <div class="" data-pohon="stepper-container"><button type="button" data-state="inactive" disabled="" data-disabled="" data-orientation="horizontal" tabindex="-1" aria-describedby="akar-stepper-item-description-v-0-0-5" aria-labelledby="akar-stepper-item-title-v-0-0-4" class="" data-pohon="stepper-trigger">
          <div class="" data-pohon="stepper-indicator">3</div>
        </button>
        <!--v-if-->
      </div>
      <div class="" data-pohon="stepper-wrapper">
        <div id="akar-stepper-item-title-v-0-0-4" class="" data-pohon="stepper-title">Checkout</div>
        <div id="akar-stepper-item-description-v-0-0-5" class="" data-pohon="stepper-description">Confirm your order</div>
      </div>
    </div>
  </div>
  <!--v-if-->
  <div aria-live="polite" aria-atomic="true" role="status" style="transform: translateX(-100%); position: absolute; pointer-events: none; opacity: 0; margin: 0px;"> Step 0 of 3</div>
</div>"
`;

exports[`PStepper > renders with size lg vertical correctly 1`] = `
"<div role="group" aria-label="progress" data-linear="" data-orientation="vertical" data-pohon="stepper-root">
  <div class="" data-pohon="stepper-header">
    <div aria-current="true" data-state="active" data-orientation="vertical" class="" data-pohon="stepper-item">
      <div class="" data-pohon="stepper-container"><button type="button" data-state="active" data-orientation="vertical" tabindex="0" aria-describedby="akar-stepper-item-description-v-0-0-1" aria-labelledby="akar-stepper-item-title-v-0-0-0" class="" data-pohon="stepper-trigger">
          <div class="" data-pohon="stepper-indicator"><span class="iconify i-lucide:house" aria-hidden="true" data-pohon="stepper-icon"></span></div>
        </button>
        <div data-orientation="vertical" role="none" data-state="active" class="" data-pohon="stepper-separator"></div>
      </div>
      <div class="" data-pohon="stepper-wrapper">
        <div id="akar-stepper-item-title-v-0-0-0" class="" data-pohon="stepper-title">Address</div>
        <div id="akar-stepper-item-description-v-0-0-1" class="" data-pohon="stepper-description">Add your address here</div>
      </div>
    </div>
    <div data-state="inactive" data-orientation="vertical" class="" data-pohon="stepper-item">
      <div class="" data-pohon="stepper-container"><button type="button" data-state="inactive" data-orientation="vertical" tabindex="0" aria-describedby="akar-stepper-item-description-v-0-0-3" aria-labelledby="akar-stepper-item-title-v-0-0-2" class="" data-pohon="stepper-trigger">
          <div class="" data-pohon="stepper-indicator"><span class="iconify i-lucide:truck" aria-hidden="true" data-pohon="stepper-icon"></span></div>
        </button>
        <div data-orientation="vertical" role="none" data-state="inactive" class="" data-pohon="stepper-separator"></div>
      </div>
      <div class="" data-pohon="stepper-wrapper">
        <div id="akar-stepper-item-title-v-0-0-2" class="" data-pohon="stepper-title">Shipping</div>
        <div id="akar-stepper-item-description-v-0-0-3" class="" data-pohon="stepper-description">Set your preferred shipping method</div>
      </div>
    </div>
    <div data-state="inactive" disabled="" data-disabled="" data-orientation="vertical" class="" data-pohon="stepper-item">
      <div class="" data-pohon="stepper-container"><button type="button" data-state="inactive" disabled="" data-disabled="" data-orientation="vertical" tabindex="-1" aria-describedby="akar-stepper-item-description-v-0-0-5" aria-labelledby="akar-stepper-item-title-v-0-0-4" class="" data-pohon="stepper-trigger">
          <div class="" data-pohon="stepper-indicator">3</div>
        </button>
        <!--v-if-->
      </div>
      <div class="" data-pohon="stepper-wrapper">
        <div id="akar-stepper-item-title-v-0-0-4" class="" data-pohon="stepper-title">Checkout</div>
        <div id="akar-stepper-item-description-v-0-0-5" class="" data-pohon="stepper-description">Confirm your order</div>
      </div>
    </div>
  </div>
  <!--v-if-->
  <div aria-live="polite" aria-atomic="true" role="status" style="transform: translateX(-100%); position: absolute; pointer-events: none; opacity: 0; margin: 0px;"> Step 0 of 3</div>
</div>"
`;

exports[`PStepper > renders with size md horizontal correctly 1`] = `
"<div role="group" aria-label="progress" data-linear="" data-orientation="horizontal" data-pohon="stepper-root">
  <div class="" data-pohon="stepper-header">
    <div aria-current="true" data-state="active" data-orientation="horizontal" class="" data-pohon="stepper-item">
      <div class="" data-pohon="stepper-container"><button type="button" data-state="active" data-orientation="horizontal" tabindex="0" aria-describedby="akar-stepper-item-description-v-0-0-1" aria-labelledby="akar-stepper-item-title-v-0-0-0" class="" data-pohon="stepper-trigger">
          <div class="" data-pohon="stepper-indicator"><span class="iconify i-lucide:house" aria-hidden="true" data-pohon="stepper-icon"></span></div>
        </button>
        <div data-orientation="horizontal" role="none" data-state="active" class="" data-pohon="stepper-separator"></div>
      </div>
      <div class="" data-pohon="stepper-wrapper">
        <div id="akar-stepper-item-title-v-0-0-0" class="" data-pohon="stepper-title">Address</div>
        <div id="akar-stepper-item-description-v-0-0-1" class="" data-pohon="stepper-description">Add your address here</div>
      </div>
    </div>
    <div data-state="inactive" data-orientation="horizontal" class="" data-pohon="stepper-item">
      <div class="" data-pohon="stepper-container"><button type="button" data-state="inactive" data-orientation="horizontal" tabindex="0" aria-describedby="akar-stepper-item-description-v-0-0-3" aria-labelledby="akar-stepper-item-title-v-0-0-2" class="" data-pohon="stepper-trigger">
          <div class="" data-pohon="stepper-indicator"><span class="iconify i-lucide:truck" aria-hidden="true" data-pohon="stepper-icon"></span></div>
        </button>
        <div data-orientation="horizontal" role="none" data-state="inactive" class="" data-pohon="stepper-separator"></div>
      </div>
      <div class="" data-pohon="stepper-wrapper">
        <div id="akar-stepper-item-title-v-0-0-2" class="" data-pohon="stepper-title">Shipping</div>
        <div id="akar-stepper-item-description-v-0-0-3" class="" data-pohon="stepper-description">Set your preferred shipping method</div>
      </div>
    </div>
    <div data-state="inactive" disabled="" data-disabled="" data-orientation="horizontal" class="" data-pohon="stepper-item">
      <div class="" data-pohon="stepper-container"><button type="button" data-state="inactive" disabled="" data-disabled="" data-orientation="horizontal" tabindex="-1" aria-describedby="akar-stepper-item-description-v-0-0-5" aria-labelledby="akar-stepper-item-title-v-0-0-4" class="" data-pohon="stepper-trigger">
          <div class="" data-pohon="stepper-indicator">3</div>
        </button>
        <!--v-if-->
      </div>
      <div class="" data-pohon="stepper-wrapper">
        <div id="akar-stepper-item-title-v-0-0-4" class="" data-pohon="stepper-title">Checkout</div>
        <div id="akar-stepper-item-description-v-0-0-5" class="" data-pohon="stepper-description">Confirm your order</div>
      </div>
    </div>
  </div>
  <!--v-if-->
  <div aria-live="polite" aria-atomic="true" role="status" style="transform: translateX(-100%); position: absolute; pointer-events: none; opacity: 0; margin: 0px;"> Step 0 of 3</div>
</div>"
`;

exports[`PStepper > renders with size md vertical correctly 1`] = `
"<div role="group" aria-label="progress" data-linear="" data-orientation="vertical" data-pohon="stepper-root">
  <div class="" data-pohon="stepper-header">
    <div aria-current="true" data-state="active" data-orientation="vertical" class="" data-pohon="stepper-item">
      <div class="" data-pohon="stepper-container"><button type="button" data-state="active" data-orientation="vertical" tabindex="0" aria-describedby="akar-stepper-item-description-v-0-0-1" aria-labelledby="akar-stepper-item-title-v-0-0-0" class="" data-pohon="stepper-trigger">
          <div class="" data-pohon="stepper-indicator"><span class="iconify i-lucide:house" aria-hidden="true" data-pohon="stepper-icon"></span></div>
        </button>
        <div data-orientation="vertical" role="none" data-state="active" class="" data-pohon="stepper-separator"></div>
      </div>
      <div class="" data-pohon="stepper-wrapper">
        <div id="akar-stepper-item-title-v-0-0-0" class="" data-pohon="stepper-title">Address</div>
        <div id="akar-stepper-item-description-v-0-0-1" class="" data-pohon="stepper-description">Add your address here</div>
      </div>
    </div>
    <div data-state="inactive" data-orientation="vertical" class="" data-pohon="stepper-item">
      <div class="" data-pohon="stepper-container"><button type="button" data-state="inactive" data-orientation="vertical" tabindex="0" aria-describedby="akar-stepper-item-description-v-0-0-3" aria-labelledby="akar-stepper-item-title-v-0-0-2" class="" data-pohon="stepper-trigger">
          <div class="" data-pohon="stepper-indicator"><span class="iconify i-lucide:truck" aria-hidden="true" data-pohon="stepper-icon"></span></div>
        </button>
        <div data-orientation="vertical" role="none" data-state="inactive" class="" data-pohon="stepper-separator"></div>
      </div>
      <div class="" data-pohon="stepper-wrapper">
        <div id="akar-stepper-item-title-v-0-0-2" class="" data-pohon="stepper-title">Shipping</div>
        <div id="akar-stepper-item-description-v-0-0-3" class="" data-pohon="stepper-description">Set your preferred shipping method</div>
      </div>
    </div>
    <div data-state="inactive" disabled="" data-disabled="" data-orientation="vertical" class="" data-pohon="stepper-item">
      <div class="" data-pohon="stepper-container"><button type="button" data-state="inactive" disabled="" data-disabled="" data-orientation="vertical" tabindex="-1" aria-describedby="akar-stepper-item-description-v-0-0-5" aria-labelledby="akar-stepper-item-title-v-0-0-4" class="" data-pohon="stepper-trigger">
          <div class="" data-pohon="stepper-indicator">3</div>
        </button>
        <!--v-if-->
      </div>
      <div class="" data-pohon="stepper-wrapper">
        <div id="akar-stepper-item-title-v-0-0-4" class="" data-pohon="stepper-title">Checkout</div>
        <div id="akar-stepper-item-description-v-0-0-5" class="" data-pohon="stepper-description">Confirm your order</div>
      </div>
    </div>
  </div>
  <!--v-if-->
  <div aria-live="polite" aria-atomic="true" role="status" style="transform: translateX(-100%); position: absolute; pointer-events: none; opacity: 0; margin: 0px;"> Step 0 of 3</div>
</div>"
`;

exports[`PStepper > renders with size sm horizontal correctly 1`] = `
"<div role="group" aria-label="progress" data-linear="" data-orientation="horizontal" data-pohon="stepper-root">
  <div class="" data-pohon="stepper-header">
    <div aria-current="true" data-state="active" data-orientation="horizontal" class="" data-pohon="stepper-item">
      <div class="" data-pohon="stepper-container"><button type="button" data-state="active" data-orientation="horizontal" tabindex="0" aria-describedby="akar-stepper-item-description-v-0-0-1" aria-labelledby="akar-stepper-item-title-v-0-0-0" class="" data-pohon="stepper-trigger">
          <div class="" data-pohon="stepper-indicator"><span class="iconify i-lucide:house" aria-hidden="true" data-pohon="stepper-icon"></span></div>
        </button>
        <div data-orientation="horizontal" role="none" data-state="active" class="" data-pohon="stepper-separator"></div>
      </div>
      <div class="" data-pohon="stepper-wrapper">
        <div id="akar-stepper-item-title-v-0-0-0" class="" data-pohon="stepper-title">Address</div>
        <div id="akar-stepper-item-description-v-0-0-1" class="" data-pohon="stepper-description">Add your address here</div>
      </div>
    </div>
    <div data-state="inactive" data-orientation="horizontal" class="" data-pohon="stepper-item">
      <div class="" data-pohon="stepper-container"><button type="button" data-state="inactive" data-orientation="horizontal" tabindex="0" aria-describedby="akar-stepper-item-description-v-0-0-3" aria-labelledby="akar-stepper-item-title-v-0-0-2" class="" data-pohon="stepper-trigger">
          <div class="" data-pohon="stepper-indicator"><span class="iconify i-lucide:truck" aria-hidden="true" data-pohon="stepper-icon"></span></div>
        </button>
        <div data-orientation="horizontal" role="none" data-state="inactive" class="" data-pohon="stepper-separator"></div>
      </div>
      <div class="" data-pohon="stepper-wrapper">
        <div id="akar-stepper-item-title-v-0-0-2" class="" data-pohon="stepper-title">Shipping</div>
        <div id="akar-stepper-item-description-v-0-0-3" class="" data-pohon="stepper-description">Set your preferred shipping method</div>
      </div>
    </div>
    <div data-state="inactive" disabled="" data-disabled="" data-orientation="horizontal" class="" data-pohon="stepper-item">
      <div class="" data-pohon="stepper-container"><button type="button" data-state="inactive" disabled="" data-disabled="" data-orientation="horizontal" tabindex="-1" aria-describedby="akar-stepper-item-description-v-0-0-5" aria-labelledby="akar-stepper-item-title-v-0-0-4" class="" data-pohon="stepper-trigger">
          <div class="" data-pohon="stepper-indicator">3</div>
        </button>
        <!--v-if-->
      </div>
      <div class="" data-pohon="stepper-wrapper">
        <div id="akar-stepper-item-title-v-0-0-4" class="" data-pohon="stepper-title">Checkout</div>
        <div id="akar-stepper-item-description-v-0-0-5" class="" data-pohon="stepper-description">Confirm your order</div>
      </div>
    </div>
  </div>
  <!--v-if-->
  <div aria-live="polite" aria-atomic="true" role="status" style="transform: translateX(-100%); position: absolute; pointer-events: none; opacity: 0; margin: 0px;"> Step 0 of 3</div>
</div>"
`;

exports[`PStepper > renders with size sm vertical correctly 1`] = `
"<div role="group" aria-label="progress" data-linear="" data-orientation="vertical" data-pohon="stepper-root">
  <div class="" data-pohon="stepper-header">
    <div aria-current="true" data-state="active" data-orientation="vertical" class="" data-pohon="stepper-item">
      <div class="" data-pohon="stepper-container"><button type="button" data-state="active" data-orientation="vertical" tabindex="0" aria-describedby="akar-stepper-item-description-v-0-0-1" aria-labelledby="akar-stepper-item-title-v-0-0-0" class="" data-pohon="stepper-trigger">
          <div class="" data-pohon="stepper-indicator"><span class="iconify i-lucide:house" aria-hidden="true" data-pohon="stepper-icon"></span></div>
        </button>
        <div data-orientation="vertical" role="none" data-state="active" class="" data-pohon="stepper-separator"></div>
      </div>
      <div class="" data-pohon="stepper-wrapper">
        <div id="akar-stepper-item-title-v-0-0-0" class="" data-pohon="stepper-title">Address</div>
        <div id="akar-stepper-item-description-v-0-0-1" class="" data-pohon="stepper-description">Add your address here</div>
      </div>
    </div>
    <div data-state="inactive" data-orientation="vertical" class="" data-pohon="stepper-item">
      <div class="" data-pohon="stepper-container"><button type="button" data-state="inactive" data-orientation="vertical" tabindex="0" aria-describedby="akar-stepper-item-description-v-0-0-3" aria-labelledby="akar-stepper-item-title-v-0-0-2" class="" data-pohon="stepper-trigger">
          <div class="" data-pohon="stepper-indicator"><span class="iconify i-lucide:truck" aria-hidden="true" data-pohon="stepper-icon"></span></div>
        </button>
        <div data-orientation="vertical" role="none" data-state="inactive" class="" data-pohon="stepper-separator"></div>
      </div>
      <div class="" data-pohon="stepper-wrapper">
        <div id="akar-stepper-item-title-v-0-0-2" class="" data-pohon="stepper-title">Shipping</div>
        <div id="akar-stepper-item-description-v-0-0-3" class="" data-pohon="stepper-description">Set your preferred shipping method</div>
      </div>
    </div>
    <div data-state="inactive" disabled="" data-disabled="" data-orientation="vertical" class="" data-pohon="stepper-item">
      <div class="" data-pohon="stepper-container"><button type="button" data-state="inactive" disabled="" data-disabled="" data-orientation="vertical" tabindex="-1" aria-describedby="akar-stepper-item-description-v-0-0-5" aria-labelledby="akar-stepper-item-title-v-0-0-4" class="" data-pohon="stepper-trigger">
          <div class="" data-pohon="stepper-indicator">3</div>
        </button>
        <!--v-if-->
      </div>
      <div class="" data-pohon="stepper-wrapper">
        <div id="akar-stepper-item-title-v-0-0-4" class="" data-pohon="stepper-title">Checkout</div>
        <div id="akar-stepper-item-description-v-0-0-5" class="" data-pohon="stepper-description">Confirm your order</div>
      </div>
    </div>
  </div>
  <!--v-if-->
  <div aria-live="polite" aria-atomic="true" role="status" style="transform: translateX(-100%); position: absolute; pointer-events: none; opacity: 0; margin: 0px;"> Step 0 of 3</div>
</div>"
`;

exports[`PStepper > renders with size xl horizontal correctly 1`] = `
"<div role="group" aria-label="progress" data-linear="" data-orientation="horizontal" data-pohon="stepper-root">
  <div class="" data-pohon="stepper-header">
    <div aria-current="true" data-state="active" data-orientation="horizontal" class="" data-pohon="stepper-item">
      <div class="" data-pohon="stepper-container"><button type="button" data-state="active" data-orientation="horizontal" tabindex="0" aria-describedby="akar-stepper-item-description-v-0-0-1" aria-labelledby="akar-stepper-item-title-v-0-0-0" class="" data-pohon="stepper-trigger">
          <div class="" data-pohon="stepper-indicator"><span class="iconify i-lucide:house" aria-hidden="true" data-pohon="stepper-icon"></span></div>
        </button>
        <div data-orientation="horizontal" role="none" data-state="active" class="" data-pohon="stepper-separator"></div>
      </div>
      <div class="" data-pohon="stepper-wrapper">
        <div id="akar-stepper-item-title-v-0-0-0" class="" data-pohon="stepper-title">Address</div>
        <div id="akar-stepper-item-description-v-0-0-1" class="" data-pohon="stepper-description">Add your address here</div>
      </div>
    </div>
    <div data-state="inactive" data-orientation="horizontal" class="" data-pohon="stepper-item">
      <div class="" data-pohon="stepper-container"><button type="button" data-state="inactive" data-orientation="horizontal" tabindex="0" aria-describedby="akar-stepper-item-description-v-0-0-3" aria-labelledby="akar-stepper-item-title-v-0-0-2" class="" data-pohon="stepper-trigger">
          <div class="" data-pohon="stepper-indicator"><span class="iconify i-lucide:truck" aria-hidden="true" data-pohon="stepper-icon"></span></div>
        </button>
        <div data-orientation="horizontal" role="none" data-state="inactive" class="" data-pohon="stepper-separator"></div>
      </div>
      <div class="" data-pohon="stepper-wrapper">
        <div id="akar-stepper-item-title-v-0-0-2" class="" data-pohon="stepper-title">Shipping</div>
        <div id="akar-stepper-item-description-v-0-0-3" class="" data-pohon="stepper-description">Set your preferred shipping method</div>
      </div>
    </div>
    <div data-state="inactive" disabled="" data-disabled="" data-orientation="horizontal" class="" data-pohon="stepper-item">
      <div class="" data-pohon="stepper-container"><button type="button" data-state="inactive" disabled="" data-disabled="" data-orientation="horizontal" tabindex="-1" aria-describedby="akar-stepper-item-description-v-0-0-5" aria-labelledby="akar-stepper-item-title-v-0-0-4" class="" data-pohon="stepper-trigger">
          <div class="" data-pohon="stepper-indicator">3</div>
        </button>
        <!--v-if-->
      </div>
      <div class="" data-pohon="stepper-wrapper">
        <div id="akar-stepper-item-title-v-0-0-4" class="" data-pohon="stepper-title">Checkout</div>
        <div id="akar-stepper-item-description-v-0-0-5" class="" data-pohon="stepper-description">Confirm your order</div>
      </div>
    </div>
  </div>
  <!--v-if-->
  <div aria-live="polite" aria-atomic="true" role="status" style="transform: translateX(-100%); position: absolute; pointer-events: none; opacity: 0; margin: 0px;"> Step 0 of 3</div>
</div>"
`;

exports[`PStepper > renders with size xl vertical correctly 1`] = `
"<div role="group" aria-label="progress" data-linear="" data-orientation="vertical" data-pohon="stepper-root">
  <div class="" data-pohon="stepper-header">
    <div aria-current="true" data-state="active" data-orientation="vertical" class="" data-pohon="stepper-item">
      <div class="" data-pohon="stepper-container"><button type="button" data-state="active" data-orientation="vertical" tabindex="0" aria-describedby="akar-stepper-item-description-v-0-0-1" aria-labelledby="akar-stepper-item-title-v-0-0-0" class="" data-pohon="stepper-trigger">
          <div class="" data-pohon="stepper-indicator"><span class="iconify i-lucide:house" aria-hidden="true" data-pohon="stepper-icon"></span></div>
        </button>
        <div data-orientation="vertical" role="none" data-state="active" class="" data-pohon="stepper-separator"></div>
      </div>
      <div class="" data-pohon="stepper-wrapper">
        <div id="akar-stepper-item-title-v-0-0-0" class="" data-pohon="stepper-title">Address</div>
        <div id="akar-stepper-item-description-v-0-0-1" class="" data-pohon="stepper-description">Add your address here</div>
      </div>
    </div>
    <div data-state="inactive" data-orientation="vertical" class="" data-pohon="stepper-item">
      <div class="" data-pohon="stepper-container"><button type="button" data-state="inactive" data-orientation="vertical" tabindex="0" aria-describedby="akar-stepper-item-description-v-0-0-3" aria-labelledby="akar-stepper-item-title-v-0-0-2" class="" data-pohon="stepper-trigger">
          <div class="" data-pohon="stepper-indicator"><span class="iconify i-lucide:truck" aria-hidden="true" data-pohon="stepper-icon"></span></div>
        </button>
        <div data-orientation="vertical" role="none" data-state="inactive" class="" data-pohon="stepper-separator"></div>
      </div>
      <div class="" data-pohon="stepper-wrapper">
        <div id="akar-stepper-item-title-v-0-0-2" class="" data-pohon="stepper-title">Shipping</div>
        <div id="akar-stepper-item-description-v-0-0-3" class="" data-pohon="stepper-description">Set your preferred shipping method</div>
      </div>
    </div>
    <div data-state="inactive" disabled="" data-disabled="" data-orientation="vertical" class="" data-pohon="stepper-item">
      <div class="" data-pohon="stepper-container"><button type="button" data-state="inactive" disabled="" data-disabled="" data-orientation="vertical" tabindex="-1" aria-describedby="akar-stepper-item-description-v-0-0-5" aria-labelledby="akar-stepper-item-title-v-0-0-4" class="" data-pohon="stepper-trigger">
          <div class="" data-pohon="stepper-indicator">3</div>
        </button>
        <!--v-if-->
      </div>
      <div class="" data-pohon="stepper-wrapper">
        <div id="akar-stepper-item-title-v-0-0-4" class="" data-pohon="stepper-title">Checkout</div>
        <div id="akar-stepper-item-description-v-0-0-5" class="" data-pohon="stepper-description">Confirm your order</div>
      </div>
    </div>
  </div>
  <!--v-if-->
  <div aria-live="polite" aria-atomic="true" role="status" style="transform: translateX(-100%); position: absolute; pointer-events: none; opacity: 0; margin: 0px;"> Step 0 of 3</div>
</div>"
`;

exports[`PStepper > renders with size xs horizontal correctly 1`] = `
"<div role="group" aria-label="progress" data-linear="" data-orientation="horizontal" data-pohon="stepper-root">
  <div class="" data-pohon="stepper-header">
    <div aria-current="true" data-state="active" data-orientation="horizontal" class="" data-pohon="stepper-item">
      <div class="" data-pohon="stepper-container"><button type="button" data-state="active" data-orientation="horizontal" tabindex="0" aria-describedby="akar-stepper-item-description-v-0-0-1" aria-labelledby="akar-stepper-item-title-v-0-0-0" class="" data-pohon="stepper-trigger">
          <div class="" data-pohon="stepper-indicator"><span class="iconify i-lucide:house" aria-hidden="true" data-pohon="stepper-icon"></span></div>
        </button>
        <div data-orientation="horizontal" role="none" data-state="active" class="" data-pohon="stepper-separator"></div>
      </div>
      <div class="" data-pohon="stepper-wrapper">
        <div id="akar-stepper-item-title-v-0-0-0" class="" data-pohon="stepper-title">Address</div>
        <div id="akar-stepper-item-description-v-0-0-1" class="" data-pohon="stepper-description">Add your address here</div>
      </div>
    </div>
    <div data-state="inactive" data-orientation="horizontal" class="" data-pohon="stepper-item">
      <div class="" data-pohon="stepper-container"><button type="button" data-state="inactive" data-orientation="horizontal" tabindex="0" aria-describedby="akar-stepper-item-description-v-0-0-3" aria-labelledby="akar-stepper-item-title-v-0-0-2" class="" data-pohon="stepper-trigger">
          <div class="" data-pohon="stepper-indicator"><span class="iconify i-lucide:truck" aria-hidden="true" data-pohon="stepper-icon"></span></div>
        </button>
        <div data-orientation="horizontal" role="none" data-state="inactive" class="" data-pohon="stepper-separator"></div>
      </div>
      <div class="" data-pohon="stepper-wrapper">
        <div id="akar-stepper-item-title-v-0-0-2" class="" data-pohon="stepper-title">Shipping</div>
        <div id="akar-stepper-item-description-v-0-0-3" class="" data-pohon="stepper-description">Set your preferred shipping method</div>
      </div>
    </div>
    <div data-state="inactive" disabled="" data-disabled="" data-orientation="horizontal" class="" data-pohon="stepper-item">
      <div class="" data-pohon="stepper-container"><button type="button" data-state="inactive" disabled="" data-disabled="" data-orientation="horizontal" tabindex="-1" aria-describedby="akar-stepper-item-description-v-0-0-5" aria-labelledby="akar-stepper-item-title-v-0-0-4" class="" data-pohon="stepper-trigger">
          <div class="" data-pohon="stepper-indicator">3</div>
        </button>
        <!--v-if-->
      </div>
      <div class="" data-pohon="stepper-wrapper">
        <div id="akar-stepper-item-title-v-0-0-4" class="" data-pohon="stepper-title">Checkout</div>
        <div id="akar-stepper-item-description-v-0-0-5" class="" data-pohon="stepper-description">Confirm your order</div>
      </div>
    </div>
  </div>
  <!--v-if-->
  <div aria-live="polite" aria-atomic="true" role="status" style="transform: translateX(-100%); position: absolute; pointer-events: none; opacity: 0; margin: 0px;"> Step 0 of 3</div>
</div>"
`;

exports[`PStepper > renders with size xs vertical correctly 1`] = `
"<div role="group" aria-label="progress" data-linear="" data-orientation="vertical" data-pohon="stepper-root">
  <div class="" data-pohon="stepper-header">
    <div aria-current="true" data-state="active" data-orientation="vertical" class="" data-pohon="stepper-item">
      <div class="" data-pohon="stepper-container"><button type="button" data-state="active" data-orientation="vertical" tabindex="0" aria-describedby="akar-stepper-item-description-v-0-0-1" aria-labelledby="akar-stepper-item-title-v-0-0-0" class="" data-pohon="stepper-trigger">
          <div class="" data-pohon="stepper-indicator"><span class="iconify i-lucide:house" aria-hidden="true" data-pohon="stepper-icon"></span></div>
        </button>
        <div data-orientation="vertical" role="none" data-state="active" class="" data-pohon="stepper-separator"></div>
      </div>
      <div class="" data-pohon="stepper-wrapper">
        <div id="akar-stepper-item-title-v-0-0-0" class="" data-pohon="stepper-title">Address</div>
        <div id="akar-stepper-item-description-v-0-0-1" class="" data-pohon="stepper-description">Add your address here</div>
      </div>
    </div>
    <div data-state="inactive" data-orientation="vertical" class="" data-pohon="stepper-item">
      <div class="" data-pohon="stepper-container"><button type="button" data-state="inactive" data-orientation="vertical" tabindex="0" aria-describedby="akar-stepper-item-description-v-0-0-3" aria-labelledby="akar-stepper-item-title-v-0-0-2" class="" data-pohon="stepper-trigger">
          <div class="" data-pohon="stepper-indicator"><span class="iconify i-lucide:truck" aria-hidden="true" data-pohon="stepper-icon"></span></div>
        </button>
        <div data-orientation="vertical" role="none" data-state="inactive" class="" data-pohon="stepper-separator"></div>
      </div>
      <div class="" data-pohon="stepper-wrapper">
        <div id="akar-stepper-item-title-v-0-0-2" class="" data-pohon="stepper-title">Shipping</div>
        <div id="akar-stepper-item-description-v-0-0-3" class="" data-pohon="stepper-description">Set your preferred shipping method</div>
      </div>
    </div>
    <div data-state="inactive" disabled="" data-disabled="" data-orientation="vertical" class="" data-pohon="stepper-item">
      <div class="" data-pohon="stepper-container"><button type="button" data-state="inactive" disabled="" data-disabled="" data-orientation="vertical" tabindex="-1" aria-describedby="akar-stepper-item-description-v-0-0-5" aria-labelledby="akar-stepper-item-title-v-0-0-4" class="" data-pohon="stepper-trigger">
          <div class="" data-pohon="stepper-indicator">3</div>
        </button>
        <!--v-if-->
      </div>
      <div class="" data-pohon="stepper-wrapper">
        <div id="akar-stepper-item-title-v-0-0-4" class="" data-pohon="stepper-title">Checkout</div>
        <div id="akar-stepper-item-description-v-0-0-5" class="" data-pohon="stepper-description">Confirm your order</div>
      </div>
    </div>
  </div>
  <!--v-if-->
  <div aria-live="polite" aria-atomic="true" role="status" style="transform: translateX(-100%); position: absolute; pointer-events: none; opacity: 0; margin: 0px;"> Step 0 of 3</div>
</div>"
`;

exports[`PStepper > renders with title slot correctly 1`] = `
"<div role="group" aria-label="progress" data-linear="" data-orientation="horizontal" data-pohon="stepper-root">
  <div class="" data-pohon="stepper-header">
    <div aria-current="true" data-state="active" data-orientation="horizontal" class="" data-pohon="stepper-item">
      <div class="" data-pohon="stepper-container"><button type="button" data-state="active" data-orientation="horizontal" tabindex="0" aria-describedby="akar-stepper-item-description-v-0-0-1" aria-labelledby="akar-stepper-item-title-v-0-0-0" class="" data-pohon="stepper-trigger">
          <div class="" data-pohon="stepper-indicator"><span class="iconify i-lucide:house" aria-hidden="true" data-pohon="stepper-icon"></span></div>
        </button>
        <div data-orientation="horizontal" role="none" data-state="active" class="" data-pohon="stepper-separator"></div>
      </div>
      <div class="" data-pohon="stepper-wrapper">
        <div id="akar-stepper-item-title-v-0-0-0" class="" data-pohon="stepper-title">Title slot</div>
        <div id="akar-stepper-item-description-v-0-0-1" class="" data-pohon="stepper-description">Add your address here</div>
      </div>
    </div>
    <div data-state="inactive" data-orientation="horizontal" class="" data-pohon="stepper-item">
      <div class="" data-pohon="stepper-container"><button type="button" data-state="inactive" data-orientation="horizontal" tabindex="0" aria-describedby="akar-stepper-item-description-v-0-0-3" aria-labelledby="akar-stepper-item-title-v-0-0-2" class="" data-pohon="stepper-trigger">
          <div class="" data-pohon="stepper-indicator"><span class="iconify i-lucide:truck" aria-hidden="true" data-pohon="stepper-icon"></span></div>
        </button>
        <div data-orientation="horizontal" role="none" data-state="inactive" class="" data-pohon="stepper-separator"></div>
      </div>
      <div class="" data-pohon="stepper-wrapper">
        <div id="akar-stepper-item-title-v-0-0-2" class="" data-pohon="stepper-title">Title slot</div>
        <div id="akar-stepper-item-description-v-0-0-3" class="" data-pohon="stepper-description">Set your preferred shipping method</div>
      </div>
    </div>
    <div data-state="inactive" disabled="" data-disabled="" data-orientation="horizontal" class="" data-pohon="stepper-item">
      <div class="" data-pohon="stepper-container"><button type="button" data-state="inactive" disabled="" data-disabled="" data-orientation="horizontal" tabindex="-1" aria-describedby="akar-stepper-item-description-v-0-0-5" aria-labelledby="akar-stepper-item-title-v-0-0-4" class="" data-pohon="stepper-trigger">
          <div class="" data-pohon="stepper-indicator">3</div>
        </button>
        <!--v-if-->
      </div>
      <div class="" data-pohon="stepper-wrapper">
        <div id="akar-stepper-item-title-v-0-0-4" class="" data-pohon="stepper-title">Title slot</div>
        <div id="akar-stepper-item-description-v-0-0-5" class="" data-pohon="stepper-description">Confirm your order</div>
      </div>
    </div>
  </div>
  <!--v-if-->
  <div aria-live="polite" aria-atomic="true" role="status" style="transform: translateX(-100%); position: absolute; pointer-events: none; opacity: 0; margin: 0px;"> Step 0 of 3</div>
</div>"
`;

exports[`PStepper > renders with ui correctly 1`] = `
"<div role="group" aria-label="progress" data-linear="" data-orientation="horizontal" data-pohon="stepper-root">
  <div class="" data-pohon="stepper-header">
    <div aria-current="true" data-state="active" data-orientation="horizontal" class="" data-pohon="stepper-item">
      <div class="" data-pohon="stepper-container"><button type="button" data-state="active" data-orientation="horizontal" tabindex="0" aria-describedby="akar-stepper-item-description-v-0-0-1" aria-labelledby="akar-stepper-item-title-v-0-0-0" class="" data-pohon="stepper-trigger">
          <div class="" data-pohon="stepper-indicator"><span class="iconify i-lucide:house" aria-hidden="true" data-pohon="stepper-icon"></span></div>
        </button>
        <div data-orientation="horizontal" role="none" data-state="active" class="" data-pohon="stepper-separator"></div>
      </div>
      <div class="" data-pohon="stepper-wrapper">
        <div id="akar-stepper-item-title-v-0-0-0" class="font-bold" data-pohon="stepper-title">Address</div>
        <div id="akar-stepper-item-description-v-0-0-1" class="" data-pohon="stepper-description">Add your address here</div>
      </div>
    </div>
    <div data-state="inactive" data-orientation="horizontal" class="" data-pohon="stepper-item">
      <div class="" data-pohon="stepper-container"><button type="button" data-state="inactive" data-orientation="horizontal" tabindex="0" aria-describedby="akar-stepper-item-description-v-0-0-3" aria-labelledby="akar-stepper-item-title-v-0-0-2" class="" data-pohon="stepper-trigger">
          <div class="" data-pohon="stepper-indicator"><span class="iconify i-lucide:truck" aria-hidden="true" data-pohon="stepper-icon"></span></div>
        </button>
        <div data-orientation="horizontal" role="none" data-state="inactive" class="" data-pohon="stepper-separator"></div>
      </div>
      <div class="" data-pohon="stepper-wrapper">
        <div id="akar-stepper-item-title-v-0-0-2" class="font-bold" data-pohon="stepper-title">Shipping</div>
        <div id="akar-stepper-item-description-v-0-0-3" class="" data-pohon="stepper-description">Set your preferred shipping method</div>
      </div>
    </div>
    <div data-state="inactive" disabled="" data-disabled="" data-orientation="horizontal" class="" data-pohon="stepper-item">
      <div class="" data-pohon="stepper-container"><button type="button" data-state="inactive" disabled="" data-disabled="" data-orientation="horizontal" tabindex="-1" aria-describedby="akar-stepper-item-description-v-0-0-5" aria-labelledby="akar-stepper-item-title-v-0-0-4" class="" data-pohon="stepper-trigger">
          <div class="" data-pohon="stepper-indicator">3</div>
        </button>
        <!--v-if-->
      </div>
      <div class="" data-pohon="stepper-wrapper">
        <div id="akar-stepper-item-title-v-0-0-4" class="font-bold" data-pohon="stepper-title">Checkout</div>
        <div id="akar-stepper-item-description-v-0-0-5" class="" data-pohon="stepper-description">Confirm your order</div>
      </div>
    </div>
  </div>
  <!--v-if-->
  <div aria-live="polite" aria-atomic="true" role="status" style="transform: translateX(-100%); position: absolute; pointer-events: none; opacity: 0; margin: 0px;"> Step 0 of 3</div>
</div>"
`;

exports[`PStepper > renders without linear correctly 1`] = `
"<div role="group" aria-label="progress" data-orientation="horizontal" data-pohon="stepper-root">
  <div class="" data-pohon="stepper-header">
    <div aria-current="true" data-state="active" data-orientation="horizontal" class="" data-pohon="stepper-item">
      <div class="" data-pohon="stepper-container"><button type="button" data-state="active" data-orientation="horizontal" tabindex="0" aria-describedby="akar-stepper-item-description-v-0-0-1" aria-labelledby="akar-stepper-item-title-v-0-0-0" class="" data-pohon="stepper-trigger">
          <div class="" data-pohon="stepper-indicator"><span class="iconify i-lucide:house" aria-hidden="true" data-pohon="stepper-icon"></span></div>
        </button>
        <div data-orientation="horizontal" role="none" data-state="active" class="" data-pohon="stepper-separator"></div>
      </div>
      <div class="" data-pohon="stepper-wrapper">
        <div id="akar-stepper-item-title-v-0-0-0" class="" data-pohon="stepper-title">Address</div>
        <div id="akar-stepper-item-description-v-0-0-1" class="" data-pohon="stepper-description">Add your address here</div>
      </div>
    </div>
    <div data-state="inactive" data-orientation="horizontal" class="" data-pohon="stepper-item">
      <div class="" data-pohon="stepper-container"><button type="button" data-state="inactive" data-orientation="horizontal" tabindex="0" aria-describedby="akar-stepper-item-description-v-0-0-3" aria-labelledby="akar-stepper-item-title-v-0-0-2" class="" data-pohon="stepper-trigger">
          <div class="" data-pohon="stepper-indicator"><span class="iconify i-lucide:truck" aria-hidden="true" data-pohon="stepper-icon"></span></div>
        </button>
        <div data-orientation="horizontal" role="none" data-state="inactive" class="" data-pohon="stepper-separator"></div>
      </div>
      <div class="" data-pohon="stepper-wrapper">
        <div id="akar-stepper-item-title-v-0-0-2" class="" data-pohon="stepper-title">Shipping</div>
        <div id="akar-stepper-item-description-v-0-0-3" class="" data-pohon="stepper-description">Set your preferred shipping method</div>
      </div>
    </div>
    <div data-state="inactive" data-orientation="horizontal" class="" data-pohon="stepper-item">
      <div class="" data-pohon="stepper-container"><button type="button" data-state="inactive" data-orientation="horizontal" tabindex="0" aria-describedby="akar-stepper-item-description-v-0-0-5" aria-labelledby="akar-stepper-item-title-v-0-0-4" class="" data-pohon="stepper-trigger">
          <div class="" data-pohon="stepper-indicator">3</div>
        </button>
        <!--v-if-->
      </div>
      <div class="" data-pohon="stepper-wrapper">
        <div id="akar-stepper-item-title-v-0-0-4" class="" data-pohon="stepper-title">Checkout</div>
        <div id="akar-stepper-item-description-v-0-0-5" class="" data-pohon="stepper-description">Confirm your order</div>
      </div>
    </div>
  </div>
  <!--v-if-->
  <div aria-live="polite" aria-atomic="true" role="status" style="transform: translateX(-100%); position: absolute; pointer-events: none; opacity: 0; margin: 0px;"> Step 0 of 3</div>
</div>"
`;
